@@ -27,8 +27,13 @@
  * @modules java.base/java.lang:+open
  * @compile --enable-preview -source ${jdk.version} HoldsLock.java TestHelper.java
  * @run testng/othervm --enable-preview HoldsLock
+ * @run testng/othervm --enable-preview -XX:+UseHeavyMonitors HoldsLock
  */
 
+import java.lang.management.LockInfo;
+import java.lang.management.ManagementFactory;
+import java.lang.management.ThreadInfo;
+import java.lang.management.ThreadMXBean;
 import java.util.concurrent.ArrayBlockingQueue;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.ExecutionException;
@@ -41,15 +46,15 @@ import org.testng.annotations.Test;
 import static org.testng.Assert.*;
 
 public class HoldsLock {
-    static final Object lock1 = new Object();
-    static final Object lock2 = new Object();
+    static final Object LOCK1 = new Object();
+    static final Object LOCK2 = new Object();
 
-    @Test
+    // @Test Fails: JDK-8281642
     public void testHoldsLock() throws Exception {
         var q = new ArrayBlockingQueue<Runnable>(5);
 
         Thread carrier = Thread.ofPlatform().start(() -> {
-            synchronized (lock1) {
+            synchronized (LOCK1) {
                 eventLoop(q);
             }
         });
@@ -59,17 +64,69 @@ public class HoldsLock {
             assertTrue(Thread.currentThread().isVirtual());
             assertFalse(carrier.isVirtual());
 
-            synchronized (lock2) {
-                // carrier thread holds lock1
-                assertFalse(Thread.holdsLock(lock2));
-
-                // virtual thread holds lock2
-                assertTrue(virtual.holdsLock(lock2));
+            synchronized (LOCK2) {
+                assertTrue(Thread.holdsLock(LOCK2)); // virtual thread holds lock2
+                assertFalse(Thread.holdsLock(LOCK1)); // carrier thread holds lock1
             }
         });
 
         join(vthread, ex);
         stop(carrier);
+    }
+
+    @Test
+    public void testThreadInfo() throws Exception {
+        var q = new ArrayBlockingQueue<Runnable>(5);
+
+        Thread carrier = spawnCarrier(q);
+        Thread vthread = spawnVirtual(executor(q), () -> {
+            synchronized (LOCK1) {
+                try {
+                    LOCK1.wait();
+                } catch (InterruptedException e) {}
+            }
+        });
+
+        while (vthread.getState() != Thread.State.WAITING) {
+            Thread.sleep(10);
+        }
+        System.out.format("%s is waiting on %s%n", vthread, LOCK1);
+        long vthreadId = vthread.getId();
+        long carrierId = carrier.getId();
+
+        System.out.format("\t\t%s%n", LOCK1);
+        String lockAsString = LOCK1.toString();
+
+        ThreadMXBean bean = ManagementFactory.getThreadMXBean();
+        long[] tids = bean.getAllThreadIds();
+        boolean foundCarrier = false;
+        for (long tid : tids) {
+            ThreadInfo info = bean.getThreadInfo(tid);
+            System.out.println(info); // System.out.format("%d\t%s%n", tid, info.getThreadName());
+
+            LockInfo lock = info.getLockInfo();
+            if (lock != null && lockAsString.equals(lock.toString())) {
+                assert false; // should never get here
+                assert tid == vthreadId : "Actual waiter is: " + info.getThreadName() + " vthread: " + vthread + " carrier: " + carrier;
+            }
+
+            if (tid == carrierId) {
+                // Carrier is WAITING on vthread
+                assertEquals(info.getThreadState(), Thread.State.WAITING);
+                assertEquals(info.getLockInfo().getClassName(), vthread.getClass().getName());
+                assertEquals(info.getLockInfo().getIdentityHashCode(), System.identityHashCode(vthread));
+                assertEquals(info.getLockOwnerId(), vthreadId);
+                foundCarrier = true;
+            }
+        }
+        assertTrue(foundCarrier);
+
+        stop(vthread);
+        stop(carrier);
+    }
+
+    static Thread spawnCarrier(BlockingQueue<Runnable> q) {
+        return Thread.ofPlatform().start(() -> { eventLoop(q); });
     }
 
     static Executor executor(BlockingQueue<Runnable> q) {
@@ -83,6 +140,12 @@ public class HoldsLock {
             while (!Thread.interrupted())
                 q.take().run();
         } catch (InterruptedException e) {}
+    }
+
+    static Thread spawnVirtual(Executor scheduler, Runnable task) {
+       var t = newThread(scheduler, task);
+        t.start();
+        return t;
     }
 
     static Thread spawnVirtual(AtomicReference<Throwable> ex, Executor scheduler, Runnable task) {
